@@ -5,10 +5,63 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dotcms</groupId>
     <artifactId>dotcms-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${revision}${sha1}${changelist}</version>
     <packaging>pom</packaging>
     <description>DotCMS</description>
     <properties>
+        <!-- See https://maven.apache.org/maven-ci-friendly.html -->
+        <revision>1.0.0</revision>
+        <changelist>-SNAPSHOT</changelist>
+        <sha1/>
+        <flatten.mode>oss</flatten.mode>
+        <flatten.skip>false</flatten.skip>
+        <!-- default load from .sdkmanrc file -->
+        <!--suppress UnresolvedMavenProperty -->
+        <sdkman.java.version>${ext.java}</sdkman.java.version>
+        <!-- allows for override version of base for docker container separate from build -->
+        <runtime.docker.sdkman.java.version>${sdkman.java.version}</runtime.docker.sdkman.java.version>
+
+        <!-- this is the version of source we support in source must be same or less that running version
+         run version is set by .sdkmanrc file in project root should update only after downstream plugins and projects
+         support new version default in environments/environment.properties and can be changed for local developer in
+        environments/dev/user-dev.properties -->
+        <!--suppress UnresolvedMavenProperty -->
+        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
+        <maven.compiler.target>${maven.compiler.release}</maven.compiler.target>
+        <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
+        <maven.compiler.testTarget>${maven.compiler.target}</maven.compiler.testTarget>
+        <java.module.args>
+            --illegal-access=deny
+            --add-modules java.se
+            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/java.nio=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens java.management/sun.management=ALL-UNNAMED
+            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+            --add-opens java.base/java.lang.ref=ALL-UNNAMED
+            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens java.base/java.net=ALL-UNNAMED
+            --add-opens java.base/java.nio=ALL-UNNAMED
+            --add-opens java.base/java.nio.charset=ALL-UNNAMED
+            --add-opens java.base/java.time=ALL-UNNAMED
+            --add-opens java.base/java.time.zone=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+            --add-opens java.base/java.util.regex=ALL-UNNAMED
+            --add-opens java.base/javax.crypto.spec=ALL-UNNAMED
+            --add-opens java.management/javax.management=ALL-UNNAMED
+            --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+            --add-opens java.base/sun.util.calendar=ALL-UNNAMED
+            --add-opens java.base/sun.util.locale=ALL-UNNAMED
+        </java.module.args>
+
+        <maven.deploy.skip>false</maven.deploy.skip>
         <tomcat.version>9.0.85</tomcat.version>
         <!-- Add any properties here that are to have defaults and overrides set in the environment properties -->
         <!--suppress UnresolvedMavenProperty -->
@@ -24,7 +77,7 @@
         <docker.jacoco.skip>true</docker.jacoco.skip>
         <!-- starter -->
         <starter.download.folder>${project.build.directory}/starter</starter.download.folder>
-        <starter.deploy.version>empty_20240201</starter.deploy.version>
+        <starter.deploy.version>empty_20240531</starter.deploy.version>
         <starter.deploy.filename>starter.zip</starter.deploy.filename>
         <starter.run.version>${starter.deploy.version}</starter.run.version>
         <starter.run.filename>starter-${starter.run.version}.zip</starter.run.filename>
@@ -38,7 +91,7 @@
         <insecure.repositories>WARN</insecure.repositories>
         <!-- jandex maven plugin version -->
         <jandex-maven-plugin.version>1.2.3</jandex-maven-plugin.version>
-        <java.version>11</java.version>
+
         <javadoc.additional.params>-Xdoclint:none --allow-script-in-comments</javadoc.additional.params>
         <jdk.min.version>${maven.compiler.argument.source}</jdk.min.version>
         <maven.compiler.argument.source>${maven.compiler.source}</maven.compiler.argument.source>
@@ -46,11 +99,7 @@
         <maven.compiler.argument.testSource>${maven.compiler.testSource}</maven.compiler.argument.testSource>
         <maven.compiler.argument.testTarget>${maven.compiler.testTarget}</maven.compiler.argument.testTarget>
         <maven.compiler.parameters>true</maven.compiler.parameters>
-        <maven.compiler.release>11</maven.compiler.release>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
-        <maven.compiler.testTarget>${maven.compiler.target}</maven.compiler.testTarget>
+
         <maven.min.version>3.8.1</maven.min.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -74,7 +123,7 @@
         <version.deploy.plugin>3.1.1</version.deploy.plugin>
         <version.docker-compose.plugin>4.0.0</version.docker-compose.plugin>
         <!-- version.* properties are defined in jboss-parent and are overridden/updated here: -->
-        <version.enforcer.plugin>3.0.0</version.enforcer.plugin>
+        <version.enforcer.plugin>3.5.0</version.enforcer.plugin>
         <version.exec.plugin>3.0.0</version.exec.plugin>
         <version.surefire.plugin>3.2.5</version.surefire.plugin>
         <version.failsafe.plugin>${version.surefire.plugin}</version.failsafe.plugin>
@@ -99,6 +148,7 @@
         <version.source.plugin>3.1.0</version.source.plugin>
         <version.frontend.plugin>1.12.1</version.frontend.plugin>
         <version.properties.plugin>1.2.1</version.properties.plugin>
+        <version.flatten.plugin>1.6.0</version.flatten.plugin>
         <version.versions.plugin>2.8.1</version.versions.plugin>
         <version.maven.plugin.plugin>3.8.1</version.maven.plugin.plugin>
         <version.war.plugin>3.2.3</version.war.plugin>
@@ -122,7 +172,7 @@
         <skipTests>false</skipTests>
         <skip.surefire.tests>${skipTests}</skip.surefire.tests>
         <surefire.fork.count>1</surefire.fork.count>
-        <immutables.version>2.9.0</immutables.version>
+        <immutables.version>2.10.1</immutables.version>
         <docker.platforms/>
         <docker.output.image.name>dotcms/dotcms-test</docker.output.image.name>
         <docker.version.tag>${project.version}</docker.version.tag>
@@ -138,7 +188,7 @@
         <docker.container.name.pattern>${docker.run.context}_%a</docker.container.name.pattern>
         <license.user.path>${user.home}/.dotcms/license/license.dat</license.user.path>
         <license.use>false</license.use>
-        <dotcms.startup.timeout>120000</dotcms.startup.timeout>
+        <dotcms.startup.timeout>150000</dotcms.startup.timeout>
         <docker.license.volume.internal>/data/local/dotsecure/license/license.dat</docker.license.volume.internal>
         <docker.starter.volume.internal>/data/starter</docker.starter.volume.internal>
         <docker.db.volume>${docker.run.context}_db</docker.db.volume>
@@ -161,7 +211,34 @@
 
     <build>
         <pluginManagement>
+
             <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>flatten-maven-plugin</artifactId>
+                    <version>${version.flatten.plugin}</version>
+                    <configuration>
+                        <updatePomFile>true</updatePomFile>
+                        <flattenMode>${flatten.mode}</flattenMode>
+                        <skip>${flatten.skip}</skip>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>flatten</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>flatten</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>flatten.clean</id>
+                            <phase>clean</phase>
+                            <goals>
+                                <goal>clean</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>properties-maven-plugin</artifactId>
@@ -577,7 +654,7 @@
                     <version>${version.compiler.plugin}</version>
                     <configuration>
                         <fork>true</fork>
-                        <release>${java.version}</release>
+                        <release>${maven.compiler.release}</release>
                         <compilerArgs>
                             <arg>-Xlint:unchecked</arg>
                         </compilerArgs>
@@ -617,13 +694,9 @@
                          files and hence the coverage report.
                         -->
                         <argLine>@{argLine} -Xmx1024m
-                            --add-modules java.se
-                            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                            --add-opens java.base/java.lang=ALL-UNNAMED
-                            --add-opens java.base/java.nio=ALL-UNNAMED
-                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-                            --add-opens java.management/sun.management=ALL-UNNAMED
-                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
+                            ${java.module.args}
+                        </argLine>
+
                         <trimStackTrace>false</trimStackTrace>
                     </configuration>
                 </plugin>
@@ -772,13 +845,10 @@
                         <forkCount>${surefire.fork.count}</forkCount>
                         <reuseForks>true</reuseForks>
                         <argLine>@{argLine} -Xmx1024m
-                            --add-modules java.se
-                            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                            --add-opens java.base/java.lang=ALL-UNNAMED
-                            --add-opens java.base/java.nio=ALL-UNNAMED
-                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-                            --add-opens java.management/sun.management=ALL-UNNAMED
-                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
+                            --illegal-access=deny
+                            ${java.module.args}
+                        </argLine>
+
                         <systemPropertyVariables/>
                         <trimStackTrace>true</trimStackTrace>
                     </configuration>
@@ -885,6 +955,10 @@
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
                 <artifactId>properties-maven-plugin</artifactId>
                 <executions>
                     <execution>
@@ -898,6 +972,7 @@
                             <useDefaultValues>true</useDefaultValues>
                             <files>
                                 <file>${environment.properties.defaults}</file>
+                                <file>${maven.multiModuleProjectDirectory}/.sdkmanrc</file>
                             </files>
                             <keyPrefix>ext.</keyPrefix>
                         </configuration>
@@ -1086,48 +1161,6 @@
         <system>GitHub</system>
         <url>https://github.com/dotCMS/core/issues/</url>
     </issueManagement>
-    <repositories>
-        <repository>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>dotcms-libs</id>
-            <url>https://repo.dotcms.com/artifactory/libs-release/</url>
-        </repository>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>jitpack</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>dotcms-libs</id>
-            <url>https://repo.dotcms.com/artifactory/libs-release</url>
-        </pluginRepository>
-        <pluginRepository>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <id>dotcms-libs-snapshot</id>
-            <url>https://repo.dotcms.com/artifactory/libs-snapshot-local</url>
-        </pluginRepository>
-        <pluginRepository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>jitpack</id>
-            <url>https://jitpack.io</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <profiles>
         <profile>
@@ -1503,7 +1536,6 @@
                             </excludes>
                         </configuration>
                         <executions>
-
                             <execution>
                                 <id>prepare-agent</id>
                                 <goals>
@@ -1625,14 +1657,53 @@
             </build>
         </profile>
     </profiles>
+    <repositories>
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>dotcms-libs</id>
+            <url>https://repo.dotcms.com/artifactory/libs-release</url>
+        </repository>
+        <repository>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>dotcms-libs-snapshot-local</id>
+            <name>IDotCMS libs Snapshots</name>
+            <url>https://repo.dotcms.com/artifactory/libs-snapshot-local</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>dotcms-libs</id>
+            <url>https://repo.dotcms.com/artifactory/libs-release</url>
+        </pluginRepository>
+        <pluginRepository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>dotcms-libs-snapshot</id>
+            <url>https://repo.dotcms.com/artifactory/libs-snapshot</url>
+        </pluginRepository>
+    </pluginRepositories>
     <distributionManagement>
         <repository>
-            <id>dotcms-libs</id>
+            <id>dotcms-libs-local</id>
             <name>DotCMS libs Release</name>
             <url>https://repo.dotcms.com/artifactory/libs-release-local</url>
         </repository>
         <snapshotRepository>
-            <id>dotcms-libs-snapshot</id>
+            <id>dotcms-libs-snapshot-local</id>
             <name>IDotCMS libs Snapshots</name>
             <url>https://repo.dotcms.com/artifactory/libs-snapshot-local</url>
         </snapshotRepository>
